--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-    <section>
+    <section class="rating-card-section">
 
         <div class="rating-card-container">
+            <!-- Primul pas -->
             <div class="card-unu">
                 <div>
                     <button class="button-star">
@@ -30,12 +31,15 @@
 
                 </div>
                 <button class="rating-card-button-submit">SUBMIT</button>
-
             </div>
+
+            <!-- Al doilea pas -->
             <div class="card-doi">
-                <p>s-a dar submit</p>
+                <!-- to do: insereaza mai jos celelalte elemente in pasul 2 ( poza, paragraf, h2, paragraf ) -->
+                <p class="selected-rate-text"> You selected <span class="selected-rate"></span> out of 3 </p>
             </div>
         </div>
+
     </section>
     
     <script src="./script.js"></script>
