cred ca este terminat

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -33,10 +36,23 @@
                 <button class="rating-card-button-submit">SUBMIT</button>
             </div>
 
+            
+
             <!-- Al doilea pas -->
             <div class="card-doi">
+
+                    <button class="reset-button"> 
+                        <img class="reset-button-icon" src="./img/reset-icon.svg" alt="reset-icon">
+                        Reset
+                    </button>
+                 
                 <!-- to do: insereaza mai jos celelalte elemente in pasul 2 ( poza, paragraf, h2, paragraf ) -->
-                <p class="selected-rate-text"> You selected <span class="selected-rate"></span> out of 3 </p>
+                <img src="./img/illustration-thank-you.svg" alt="thank-you">
+                <p class="selected-rate-text nu-imi-vine-nume"> You selected <span class="selected-rate nu-imi-vine-nume"></span> out of 3 </p>
+                <h2 class="secound-card-title">Thank you!</h2>
+                <p class="secound-paragraph-container">We appreciate you tanking the time to give a rating.
+                    If you even need more suport, don`t hasitate to get in touch!
+                </p>
             </div>
         </div>
 
